# fairy-skeleton

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Changelog.md  JenBasicFail.json  README.md  app.py  error_taxonomy.md  pyproject.toml  pytest.ini  requirements.txt  samples_toy.csv  what_to_submit_where.md
.github/workflows/: ci.yml  cross-platform-smoke.yml
demos/PASS_minimal_rnaseq/: metadata.csv
demos/bulk_demo/: files.tsv  samples.tsv
docs/: dev-notes.md  policies.md
docs/samples/: report_v0.example.json
fairy/cli/: run.py
fairy/core/: project.py  storage.py  validation_api.py
fairy/core/models/: report_v0.py
fairy/core/services/: report_writer.py  validator.py
fairy/core/validators/: generic.py  rna.py
fairy/rulepacks/GEO-SEQ-BULK/: v0_1_0.json
fairy/ui/: home_view.py  metadata_preview.py  preview_utils.py  project_view.py  requirements.txt
fairy/ui/shared/: context.py
fairy/ui/tabs/: data_inventory.py  deidentification.py  export_validate.py  metadata.py  overview.py  permissions_ethics.py  repository.py
fairy/utils/: projects.py  ui.py
fairy/validation/: checks.py  types.py
project_dir/reports/: report_v0.json
project_dir/samples/: report_example.json
schema/: report_v0.json
schemas/: .gitignore  registry.yaml  report_v0.schema.json  sample_table.py
schemas/geo/: rnaseq_minimal.yaml
tests/: test.csv  test_golden_bad.py  test_report_roundtrip.py  test_schema_roundtrip.py  test_schema_writer_alignment.py  test_storage.py
tests/fairy/: test_bad.csv
tests/golden/: bad.csv
tests/golden/expected/: report_bad.json
validation/: process_csv.py  report_writer.py
(+4 files in other folders)
