[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairy-skeleton"                # demo distribution name
version = "0.1.0"
description = "FAIRy demo environment (Streamlit + thin CLI) that will call fairy-core."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jennifer Slotnick" }]
license = { text = "MIT" }
# Minimal runtime deps for the validator demo; adjust as you wire things up:
dependencies = [
  "pandas>=2.0",
  "pandera>=0.18"
]

[project.urls]
Homepage = "https://github.com/yuummmer/metadata-wizard"
Repository = "https://github.com/yuummmer/metadata-wizard"

[project.optional-dependencies]
ui = ["streamlit>=1.36"]               # later: `pip install .[ui]` for the demo UI
dev = ["pytest", "pandas", "pandera", "jsonschema"]

[project.scripts]
fairy = "fairy.cli.run:main"
fairy-demo = "fairy.cli.run:demo_alias_main"  # <-- demo CLI (reserve `fairy` for the core package)

[tool.setuptools.packages.find]
where = ["."]
include = ["fairy*"]              # our package is `fairy_demo` inside this repo

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
  \.venv
| \.git
| __pycache__
| \.fairy_data
| exports
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", ".fairy_data", "exports"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", ".fairy_data", "exports"]
lint.select = ["E","F","I","B","UP"]   # basic flake8 + bugbear + pyupgrade + imports
lint.ignore = ["E203","E266"]           # keep Black happy
